--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "path": "/home/lab6/Desktop/COLLECTED_DS/ptb-xl-a-large-publicly-available-electrocardiography-dataset-1.0.1/",
-    "collected_datasets_path": "/home/lab6/Desktop/COLLECTED_DS/",
+    "ptb_path": "/path/to/ptb-xl-a-large-publicly-available-electrocardiography-dataset-1.0.1/",
+    "collected_datasets_path": "path/to/the/folder/where/you/want/to/collect/",
     "sampling_rate": 100,
     "labels": [
         "1AVB",
