--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "ptb_path": "/path/to/ptb-xl-a-large-publicly-available-electrocardiography-dataset-1.0.1/",
     "collected_datasets_path": "path/to/the/folder/where/you/want/to/collect/",
-    "sampling_rate": 100,
+    "sampling_rate": 500,
     "labels": [
         "1AVB",
         "CRBBB",
@@ -10,5 +10,6 @@
         "SBRAD",
         "AFIB",
         "SR"
-    ]
+    ],
+    "label": "selected_one_label"
 }
