--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
     "ptb_path": "/path/to/ptb-xl-a-large-publicly-available-electrocardiography-dataset-1.0.1/",
-    "collected_datasets_path": "path/to/the/folder/where/you/want/to/collect/",
     "sampling_rate": 500,
     "labels": [
         "1AVB",
@@ -8,8 +7,6 @@
         "CLBBB",
         "STACH",
         "SBRAD",
-        "AFIB",
-        "SR"
-    ],
-    "label": "selected_one_label"
+        "AFIB"
+    ]
 }
