--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
         "SBRAD",
         "AFIB"
     ],
+    "classification_type": "multi-label",
     "training": {
         "loss": "binary_crossentropy",
         "lr": 0.001,
