--- a/config.json
+++ b/config.json
@@ -1,37 +1,40 @@
 {
-    "ptb_path": "/home/lab6/Desktop/COLLECTED_DS/ptb-xl-a-large-publicly-available-electrocardiography-dataset-1.0.1/",
-    "tis_path": "/home/lab6/Downloads/technion_ecg_data.zip",
+    "ptb_path": "path/to/ptb-xl-a-large-publicly-available-electrocardiography-dataset-1.0.1/",
+    "tis_path": "path/to/technion_ecg_data.zip",
     "pathology_mapping_file": "/path/to/pathology_mapping.csv",
-    "path_to_multi_class_model": "./multi-class_final_model.hdf5",
-    "path_to_multi_label_model": "/path/to/multi-label_final_model.hdf5",
-    "leads_order": ["I", "II", "III", "aVL", "aVR", "aVF", "V1", "V2", "V3", "V4", "V5", "V6"],
-    "tis_lead_min_max": [
-        [-972.0, 2251.0], [-1285.0, 2697.0], [-1791.75, 2017.75], [-1155.75, 1838.0], [-2122.0, 921.75],
-        [-1309.0, 2251.0], [-2774.0, 1391.0], [-3732.0, 2211.75], [-3849.0, 2838.5], [-3176.5, 3941.0],
-        [-2355.0, 4256.0], [-1744.0, 3775.5]
-    ],
-    "ptb_lead_min_max": [
-        [-0.47300000000000003, 1.2309999999999999], [-0.6380000000000001, 1.1785], [-1.209, 0.7915000000000001],
-        [-1.0310000000000001, 0.4045], [-0.4995, 1.1405], [-0.792, 0.919], [-1.668, 0.7450000000000001],
-        [-2.5680000000000005, 1.2685], [-2.395, 1.6595], [-1.6715, 2.36], [-0.9900000000000001, 2.324],
-        [-0.6705000000000001, 1.803]
-    ],
-    "sampling_rate": 500,
-    "labels": [
-        "1AVB",
-        "CRBBB",
-        "CLBBB",
-        "STACH",
-        "SBRAD",
-        "AFIB"
-    ],
+    "path_to_model": "path/to/model.hdf5",
+    "labels": ["1AVB", "CRBBB", "CLBBB", "STACH", "SBRAD", "AFIB"],
     "classification_type": "multi-class",
-    "experiment_name": "both8_both2",
-    "training": {
+    "test_experiment_name": "test_experiment_name",
+    "training_config": {
         "loss": "categorical_crossentropy",
         "lr": 0.001,
-        "batch_size": 64,
-        "epochs": 30
+        "batch_size": 32,
+        "epochs": 2
+    },
+    "data_config": {
+        "source": "ptb",
+        "sampling_rate": 500,
+        "points": 5000,
+        "pad_mode": "constant",
+        "norm_by": "global_min_max",
+        "normalization_params":
+        {
+            "global_min_max":
+            {
+                "tis_lead_min_max": [
+                    [-972.0, 2251.0], [-1285.0, 2697.0], [-1791.75, 2017.75], [-1155.75, 1838.0], [-2122.0, 921.75],
+                    [-1309.0, 2251.0], [-2774.0, 1391.0], [-3732.0, 2211.75], [-3849.0, 2838.5], [-3176.5, 3941.0],
+                    [-2355.0, 4256.0], [-1744.0, 3775.5]
+                ],
+                "ptb_lead_min_max": [
+                    [-0.47300000000000003, 1.2309999999999999], [-0.6380000000000001, 1.1785], [-1.209, 0.7915000000000001],
+                    [-1.0310000000000001, 0.4045], [-0.4995, 1.1405], [-0.792, 0.919], [-1.668, 0.7450000000000001],
+                    [-2.5680000000000005, 1.2685], [-2.395, 1.6595], [-1.6715, 2.36], [-0.9900000000000001, 2.324],
+                    [-0.6705000000000001, 1.803]
+                ]
+            }
+        }
     }
 }
 
